components/janitor-bot/tests/snapshots/integration__ci-image-updater-opened-outside-window.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions: []
    dry_run: false
    name: manage-conflicts
  - actions:
      - ensure_labels_exist
      - add_labels_by_name
    dry_run: false
    name: manage-ci-image-updater
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/104/labels
    body:
      labels:
        - janitor/queued
      updated_at: ~
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/reviews
    service: forgejo
