components/janitor-bot/tests/snapshots/integration__ci-image-updater-opened.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions: []
    dry_run: false
    name: manage-conflicts
  - actions:
      - ensure_labels_exist
      - remove_labels_by_name
      - add_labels_by_name
      - approve
      - merge
    dry_run: false
    name: manage-ci-image-updater
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/104/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/104/labels
    body:
      labels:
        - image-update
        - automated
      updated_at: ~
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/104/reviews
    body:
      body: "Auto-approved: PR from ci-image-updater"
      comments: ~
      commit_id: ~
      event: APPROVED
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/104/merge
    body:
      Do: squash
      MergeCommitID: ~
      MergeMessageField: ~
      MergeTitleField: ~
      delete_branch_after_merge: true
      force_merge: ~
      head_commit_id: ~
      merge_when_checks_succeed: ~
    service: forgejo
