components/janitor-bot/tests/snapshots/integration__issue-ack.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  command: Ack
external_requests:
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/comments/500/reactions
    body:
      content: "+1"
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/labels
    body:
      color: "#c5def5"
      description: ~
      exclusive: ~
      is_archived: ~
      name: janitor/acknowledged
    service: forgejo
