components/janitor-bot/tests/snapshots/integration__pr-ignore.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  command: Ignore
external_requests:
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/comments/400/reactions
    body:
      content: "+1"
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/7/labels
    body:
      labels:
        - janitor/ignore
      updated_at: ~
    service: forgejo
